--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,16 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/hotels.png
+    - assets/banks.png
+    - assets/key.png
+    - assets/shopping_cart.png
+    - assets/stores.png
+    - assets/wallet.png
+
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
@@ -49,6 +59,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+     - family: FlamanteRoma
+       fonts:
+         - asset: assets/fonts/Flamante-Roma-Medium.ttf
+         - asset: assets/fonts/Flamante-Roma-MediumItalic.ttf
+           style: italic
   # fonts:
   #   - family: Schyler
   #     fonts:
